--- a/docs/dev-ops/nginx-1.18.0/conf/nginx.conf
+++ b/docs/dev-ops/nginx-1.18.0/conf/nginx.conf
@@ -39,13 +39,13 @@ http {
             proxy_pass_request_headers on;
             #more_clear_input_headers Accept-Encoding;  
             proxy_next_upstream error timeout;  
-            proxy_pass http://127.0.0.1:8001;
-            #proxy_pass http://backend;
+            #proxy_pass http://127.0.0.1:8001;
+            proxy_pass http://backend;
         }
     }
 
     upstream backend {
         server 127.0.0.1:8001 max_fails=5 fail_timeout=10s weight=1;
-        #server 127.0.0.1:8002 max_fails=5 fail_timeout=10s weight=1;
+        server 127.0.0.1:8002 max_fails=5 fail_timeout=10s weight=1;
     }  
 }
